# SmartShot

./: CMakeLists.txt  README.md  main.cpp  screenshotapp.cpp  screenshotapp.h  screenshotapp.ui
ScreenshotToPDF/: CMakeLists.txt  main.cpp
SmartShot/: manifest.xml  package-lock.json  webpack.config.js
SmartShot/src/taskpane/: taskpane.css  taskpane.html  taskpane.js
